Fix some gaps

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,7 +2,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
 }
 
 .logo {
@@ -11,15 +13,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 10px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  margin: 10px;
-  gap: 15px;
+  margin: 0px;
+  gap: 8px;
+  padding: 0;
 }
 
 a {
@@ -30,12 +33,3 @@ a {
   text-decoration: none;
 }
 
-.left-links {
-  margin-right: auto;
-  align-self: center;
-}
-
-.right-links {
-  margin-left: auto;
-  align-self: center;
-}
